<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia</string>
    <string name="postTitleTextView">Netology. Changing careers through education</string>
    <string name="postDateTextView">March 21, 2020</string>
    <string name="postText">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="amountOfLikes" translatable="false">10</string>
    <string name="amountOfShared" translatable="false">5</string>
    <string name="amountOfSeen" translatable="false">5</string>
</resources>